<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools">

	<item
		android:id="@+id/favorite"
		android:title="@string/favorite_menu_item"
		app:showAsAction="always"
		tools:icon="@drawable/ic_favorite_24dp">

	</item>
</menu>