<resources>
    <string name="app_name">Clean Dictionary</string>
	<string name="favorite_menu_item">Favorite</string>
	<string name="add">Add</string>
    <string name="add_new_word">Add new word</string>
	<string name="enter_word_here_hint">Enter word here</string>
	<string name="add_word_hint">Click the button to add a word!</string>
	<string name="fav_word_hint">Mark your words with a star to see them here</string>
    <string name="word_was_removed">Word was removed</string>
    <string name="undo_string">undo</string>
	<string name="error_no_connection">No connection</string>
	<string-array name="languages_spinner_items">
		<item>En</item>
		<item>Ru</item>
		<item>Fi</item>
	</string-array>
</resources>
